--- a/platform/iphone/Settings.bundle/no.lproj/Root.strings
+++ b/platform/iphone/Settings.bundle/no.lproj/Root.strings
@@ -3,13 +3,13 @@
 <plist version="1.0">
   <dict>
     <key>orderSkinsBy</key>
-    <string>Order Skins By</string>
+    <string>Sorter skins etter</string>
     <key>name</key>
-    <string>Name</string>
+    <string>Navn</string>
     <key>date</key>
     <string>Opprettelsesdato</string>
     <key>icloud</key>
-    <string>Sync to iCloud</string>
+    <string>Synkronisere til iCloud</string>
     <key>forceEn</key>
     <string>Force English</string>
   </dict>
